2012-01-19  John D. Ramsdell  <ramsdell@mitre.org>

	* interp.c (interp, print_version): Remove compiler warnings about
	testing against a constant address.

	* bin2c.c (print_version): Remove compiler warnings about testing
	against a constant address.

	* configure.ac: Corrected the NO_LUA test.  Added check for
	lauxlib.h.  Changed lua function used in lua library check from
	lua_pcall to lua_pushboolean, as lua_pcall is a macro in Lua 5.2.

2012-01-18  John D. Ramsdell  <ramsdell@mitre.org>

	* datalog.lua.in, COPYING.LIB: Fixed the address of the Free
	Software Foundation.

	* datalog.1: Added a manual page.

2011-09-30  John D. Ramsdell  <ramsdell@mitre.org>

	* CVS: Tagged as datalog-1_7.

2011-09-29  John D. Ramsdell  <ramsdell@mitre.org>

	* Makefile.am (lib_LTLIBRARIES): Added support for shared
	libraries via libtool.  The default is static libraries.

2011-09-27  John D. Ramsdell  <ramsdell@mitre.org>

	* configure.ac, Makefile.am, datalog.spec.in: Added --with-lua
	option and when specified, use the installed lua package.

	* acinclude.m4: Changed to be GNU's ax_lua.m4.

2011-09-22  John D. Ramsdell  <ramsdell@mitre.org>

	* datalog.spec.in (BuildRequires): Added build dependency on
	texinfo.

2011-09-20  John D. Ramsdell  <ramsdell@mitre.org>

	* datalog.spec.in (Release): Removed devel packages and bumped
	release number to 2.

2011-07-05  John D. Ramsdell  <ramsdell@mitre.org>

	* CVS: Tagged as datalog-1_6.

	* lua/*: Applied patch http://www.lua.org/ftp/patch-lua-5.1.4-3.

	* datalog.spec.in:  Added changelog and SMP make flags.

2011-07-01  John D. Ramsdell  <ramsdell@mitre.org>

	* loader.c (addstr): Corrected the computation of the mark for a
	quoted constant that spans multiple buffers.  When reading a
	quoted string that spans multiple buffers, bytes were lost.  This
	fixes a reader bug reported by Georges Louis.

2010-05-27  John D. Ramsdell  <ramsdell@mitre.org>

	* CVS: Tagged as datalog-1_5.
